--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>BOOKS-API</h1>
-    <p>For full objects list: </p>
-    <p> Use api with link: </p>
+    <p>For full objects list: https://my-first-book-api.herokuapp.com/api </p>
+    <p> Use api with link: https://my-first-book-api.herokuapp.com/api/<bookName></bookName></p>
 
     <h2>List of books:</h2>
     <ul>
