--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>BOOKS-API</h1>
     <p>For full objects list: https://my-first-book-api.herokuapp.com/api </p>
-    <p> Use api with link: https://my-first-book-api.herokuapp.com/api/<bookName></bookName></p>
+    <p> Use api with link: https://my-first-book-api.herokuapp.com/api/bookName></p>
 
     <h2>List of books:</h2>
     <ul>
